# CPP_Arbeidskrav

./: CMakeLists.txt  Core.cpp  Core.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  README.md  README.txt  Utils.cpp  Utils.h  main.cpp
imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_sdl.cpp  imgui_widgets.cpp
include/: SDL_rwops.h
src/: Core.cpp  Core.h  Image.cpp  Image.h  ImageManager.cpp  ImageManager.h  InputManager.cpp  InputManager.h  Utils.cpp  Utils.h
